window size by default is 1024x768 now, fix kitty centering in modal content, hide scrollbars

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,1 +1,5 @@
 @import '~bulma';
+
+// Disable scrollbars in Electron window
+::-webkit-scrollbar
+  display: none
